Refactorec code phase 1

--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,9 @@
   <!-- your app's js -->
   <!-- build:js js/scripts.js -->
   <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/service.js"></script>
+  <script src="js/messages/messages.js"></script>
+  <script src="js/messages/messages.controller.js"></script>
+  <script src="js/messages/messages.service.js"></script>
   <script src="js/configuration.js"></script>
   <!-- endbuild -->
 </head>
