Added spinner and refhresh button

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,8 @@
   <script src="js/messages/messages.js"></script>
   <script src="js/messages/messages.controller.js"></script>
   <script src="js/messages/messages.service.js"></script>
+  <script src="js/commons/commons.js"></script>
+  <script src="js/commons/spinner.service.js"></script>
   <script src="js/configuration.js"></script>
   <!-- endbuild -->
 </head>
